# xraft

./: CMakeLists.txt  Makefile.am  cairo.vcxproj  configure.ac  jpeg.vcxproj  libpng.vcxproj  libxml2.vcxproj  pixman.vcxproj  xraft.sln  xraft.vcxproj  zlib.vcxproj
examples/: CMakeLists.txt  Makefile.am  balls.cc  balls.vcxproj  cairo.cc  dbus.cc  gears.cc  gears.vcxproj  ibus.cc  spp.cc
include/: Makefile.am
include/xraft/: application.h  application_win32.h  application_x11.h  cairo.h  converter.h  dbus.h  drawable.h  geometry.h  graphics.h  graphics_win32.h  graphics_x11.h  ibus.h  input_context.h  input_context_win32.h  input_context_x11.h  object.h  opengl.h  opengl_win32.h  opengl_x11.h  pixmap.h  pointer.h  region.h  region_win32.h  region_x11.h  symbol.h  timer.h  window.h  window_win32.h  window_x11.h
src/: CMakeLists.txt  Makefile.am  application_win32.cc  application_x11.cc  dbus.cc  graphics_win32.cc  graphics_x11.cc  ibus.cc  input_context_win32.cc  input_context_x11.cc  object.cc  opengl_win32.cc  opengl_x11.cc  pixmap_win32.cc  pixmap_x11.cc  timer_win32.cc  timer_x11.cc  window_win32.cc  window_x11.cc
xemmai/: CMakeLists.txt  Makefile.am  application.cc  application.h  drawable.cc  drawable.h  geometry.cc  geometry.h  graphics.cc  graphics.h  input_context.cc  input_context.h  object.cc  object.h  opengl.cc  opengl.h  pixmap.cc  pixmap.h  region.cc  region.h  symbol.cc  symbol.h  timer.cc  timer.h  window.cc  window.h  window_define.h  window_override.h  xraft-xemmai.vcxproj  xraft.cc  xraft.h  xraftcairo-xemmai.vcxproj  xraftcairo.cc  xraftcairo.h  xraftdbus.cc  xraftwm.cc  xraftwm.h
xraftim/: CMakeLists.txt  Makefile.am  basic_dictionary.cc  basic_dictionary.h  client.vcxproj  dictionary.h  engine.cc  engine.h  lock.h  main.cc  roman.py  roman.wide  server.vcxproj  xraftim.xml.in
xraftim/ime/: context.cc  context.h  ime.cc  io.h  server.cc  ui.cc  ui.h  xraftim.rc  xraftim.reg
xrafttv/: Makefile.am  editor.cc  editor.vcxproj  editor.xm  gapped  test_attribute.cc  test_replace.cc  test_wrapped_view.cc  text_model.h  wrapped_view.h  xrafttv-xemmai.vcxproj  xrafttv.cc  xrafttv.h
xraftvt/: CMakeLists.txt  Makefile.am  buffer.cc  buffer.h  common.h  main.cc  terminal.cc  terminal.h  window.cc  window.h
xraftwm/: CMakeLists.txt  Makefile.am  client.cc  common.h  root.cc
