cmake_minimum_required(VERSION 3.14)
project(xraft VERSION 202105)
find_package(X11 1.4 REQUIRED)
find_package(DBus1 1.8 REQUIRED)
find_package(OpenGL 1.2 REQUIRED)
find_package(PkgConfig)
pkg_check_modules(CAIRO REQUIRED cairo>=1.8)
find_package(xemmai 202105 REQUIRED)
set(CMAKE_INSTALL_RPATH "\$ORIGIN/../lib")
add_subdirectory(src)
add_subdirectory(xraftvt)
add_subdirectory(xraftwm)
add_subdirectory(xraftim)
add_subdirectory(xemmai)
add_subdirectory(examples)
install(DIRECTORY include/xraft DESTINATION include)
install(TARGETS xraft xraftwm DESTINATION lib)
install(TARGETS xraftvt xrafttt DESTINATION bin)
install(TARGETS xraftim DESTINATION libexec)
install(TARGETS xraft-xemmai xraftdbus-xemmai xraftcairo-xemmai xraftwm-xemmai DESTINATION lib/xemmai-${xemmai_VERSION_MAJOR})
