link_libraries(xraft)
add_executable(balls balls.cc)
add_executable(cairo cairo.cc)
target_compile_options(cairo PRIVATE ${CAIRO_CFLAGS})
target_link_libraries(cairo -l${CAIRO_LIBRARIES})
add_executable(gears gears.cc)
add_executable(dbus dbus.cc)
add_executable(ibus ibus.cc)
add_executable(spp spp.cc)
