nobase_include_HEADERS = \
	xraft/application.h \
	xraft/application_x11.h \
	xraft/converter.h \
	xraft/dbus.h \
	xraft/drawable.h \
	xraft/geometry.h \
	xraft/graphics.h \
	xraft/graphics_x11.h \
	xraft/ibus.h \
	xraft/input_context.h \
	xraft/input_context_x11.h \
	xraft/object.h \
	xraft/opengl.h \
	xraft/opengl_x11.h \
	xraft/pixmap.h \
	xraft/pointer.h \
	xraft/region.h \
	xraft/region_x11.h \
	xraft/symbol.h \
	xraft/timer.h \
	xraft/window.h \
	xraft/window_x11.h \
	xraft/cairo.h
